Fixed image url

--- a/Pergunta-1.ipynb
+++ b/Pergunta-1.ipynb
@@ -954,7 +954,7 @@
    "metadata": {},
    "source": [
     "#### O que notamos aqui é que a origem e o destino são o mesmo. Isso pode indicar a lat/long padrão usada para indicar o centro da cidade de SP, já que estão praticamente no marco zero da cidade:\n",
-    "<img src=\"../Pictures/marco-zero.png\">"
+    "<img src=\"https://raw.githubusercontent.com/guilhermemarson/cargox-test/master/marco-zero.png\">"
    ]
   },
   {
@@ -1038,7 +1038,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../Pictures/SP-RJ.png\">"
+    "<img src=\"https://raw.githubusercontent.com/guilhermemarson/cargox-test/master/SP-RJ.png\">"
    ]
   },
   {
