Comentários traduzidos do inglês para o português

--- a/Pergunta-1.ipynb
+++ b/Pergunta-1.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Convert city_from and city_to so String to concatenate them and create a column named Route"
+    "#### Converte city_from e city_to para String para concatená-las criando uma coluna de índice"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create a df with only 'ROUTE' column"
+    "#### Cria um df com apenas a coluna 'ROUTE' "
    ]
   },
   {
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Group the routes and sum its totals"
+    "#### Agrupa as rotas e soma seus totais"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### As we can see above, city from and city to do not have null values"
+    "#### Como podemos ver acima, city_from e city_to não tem valores nulos"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Either columns are not numerical, either we have no 0s as values. Let's search for 0 as string"
+    "#### Ou as colunas não são numéricas ou não temos 0 como valor. Vamos ver se temos 0 como String"
    ]
   },
   {
@@ -408,15 +408,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusions:\n",
-    "The folowing fields are <b>null</b> when there is no information provided:<br>\n",
+    "### Conclusões:\n",
+    "Os seguinges campos são <b>null</b> quando não tem informação disponível:<br>\n",
     "Nulls in column from_state_uf : 789512<br>\n",
     "Nulls in column to_state_uf : 760145<br>\n",
     "Nulls in column from_lat : 81595<br>\n",
     "Nulls in column from_lng : 81595<br>\n",
     "Nulls in column to_lat : 508232<br>\n",
     "Nulls in column to_lng : 508232<br>\n",
-    "The following fields are <b>'0'</b> when there is no information provided:<br>\n",
+    "Os seguintes campos são <b>'0'</b> quando não tem informação disponível:<br>\n",
     "0s in column city_from_id : 81595<br>\n",
     "0s in column city_to_id : 508232<br>\n",
     "0s in column to_state_uf : 5880"
