Removed <font color> tag from comments to make them visible at github website

--- a/Pergunta-1.ipynb
+++ b/Pergunta-1.ipynb
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color ='red'>Rota mais comum</font>"
+    "# Rota mais comum"
    ]
   },
   {
@@ -609,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color ='red'>Rota só com origem mais buscada</font>"
+    "# Rota só com origem mais buscada"
    ]
   },
   {
@@ -875,7 +875,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color ='red'>Rota com origem e destino mais buscada</font>"
+    "# Rota com origem e destino mais buscada"
    ]
   },
   {
@@ -1204,7 +1204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color ='red'>Rota com origem e estado de destino mais buscada</font>"
+    "# Rota com origem e estado de destino mais buscada"
    ]
   },
   {
