--- a/Pergunta-3.ipynb
+++ b/Pergunta-3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -44,33 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['search_id', 'search_date', 'user_id', 'user_ip', 'truck_type_id',\n",
-       "       'body_type_id', 'truck_gps', 'city_from_id', 'city_to_id',\n",
-       "       'from_state_uf', 'to_state_uf', 'from_lat', 'from_lng', 'to_lat',\n",
-       "       'to_lng', 'search_source'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "searches.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -111,6 +96,43 @@
    "outputs": [],
    "source": [
     "searches['hour'].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "mu, sigma = 100, 15\n",
+    "x = mu + sigma * np.random.randn(10000)\n",
+    "\n",
+    "# the histogram of the data\n",
+    "n, bins, patches = plt.hist(x, 50, normed=1, facecolor='g', alpha=0.75)\n",
+    "#plt.hist()\n",
+    "\n",
+    "plt.xlabel('Smarts')\n",
+    "plt.ylabel('Probability')\n",
+    "plt.title('Histogram of IQ')\n",
+    "plt.text(60, .025, r'$\\mu=100,\\ \\sigma=15$')\n",
+    "plt.axis([40, 160, 0, 0.03])\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   }
  ],
